Only show notifications related to logged in user

--- a/projects/templates/projects/notifications.html
+++ b/projects/templates/projects/notifications.html
@@ -25,9 +25,9 @@
         <!-- Filters Section -->
         <div class="notifications-filters">
             <button class="filter-btn active">All</button>
-            <button class="filter-btn">Jobs</button>
-            <button class="filter-btn">My Posts</button>
-            <button class="filter-btn">Mentions</button>
+            <button class="filter-btn">Projects</button>
+            <button class="filter-btn">Messages</button>
+            <button class="filter-btn">Training</button>
         </div>
 
         <!-- Notifications List -->
